re PR rtl-optimization/28121 (verify_flow_info failed (wrong amount of branch edges after unconditional jump 2))

PR rtl-optimization/28121
	* cfgexpand.c (tree_expand_cfg): Clean EDGE_EXECUTABLE flag from
	the entry edge.

	* gcc.dg/pr28121.c: New test.

From-SVN: r114898